Correctly bind a shift to the right center instead of decrementing a center forever.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,3 +26,12 @@
     font-size: 2em;
     font-weight: bold;
 }
+
+.form-inline .form-group {
+    width: 45%;
+    margin: 1em 2%;
+}
+
+.form-inline .form-group input {
+    width: 100%;
+}
